[tool.poetry]
name = "async-stock-price-checker"
version = "0.1.0"
description = "A Python-based application dedicated to asynchronously checking real-time stock prices"
authors = ["alihezarpisheh <alihezarpisheh@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ruff = "^0.2.1"
pylint = "^3.0.3"
mypy = "^1.8.0"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-repeat = "^0.9.3"
pytest-xdist = "^3.5.0"
pytest-randomly = "^3.15.0"
httpx = "^0.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 88
select = [
    "E",  # pycodestyle
    "W",  # pycodestyle
    "F",  # pyflakes
    "UP",  # pyupgrade
    "C90",  # mccabe
    "D",  # pydocstyle
    "RUF",  # Ruff specific rules
]
ignore = []

fixable = [
    "F401",  # Remove unused imports.
    "RUF100",  # Remove unused noqa comments.
]

[tool.ruff.per-file-ignores]
"*/__init__.py" = ["F401"]


[tool.mypy]
ignore_missing_imports = true


[tool.pylint.messages_control]
# Disable warning about similar lines in multiple files (R0801)
# Disable warning about redefining a name from an outer scope (W0621)
# Disable warning about line too long, this part is handled by ruff (C0301)
# Disable warning about unused variable (W0201)
disable = ["R0801", "W0621", "C0301", "W0201"]

ignore-patterns = [
    "logging.toml",
    "poetry.lock",
    "pyproject.toml",
    "requirements.txt"
]
